--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="alert">4Linux Curso de Devops Marcos Silva DeVops.</div>
+	<div class="alert">4Linux Curso de Devops Marcos Silva DevOps.</div>
 	
 	<div class="container">
 		<div class="logo">
